<resources>
    <!-- App name... obviously -->
    <string name="app_name">FairSplit</string>

    <!-- Pre login texts -->
    <string name="prompt_login_name">Login name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password again</string>
    <string name="action_sign_in">Sign in</string>
    <string name="text_or">or</string>
    <string name="action_register">Register new account</string>
    <string name="action_menu">Menu</string>
    <string name="register_text">Fill out the form below to create a new account. You can use any loginName name (it doesn\'t have to be your e-mail address).</string>
    <string name="passwords_not_matching">Passwords do not match</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Top menu -->
    <string name="tabname_expenses">Expenses</string>
    <string name="tabname_groups">Groups</string>
    <string name="tabname_users">Users</string>
    <string name="tabname_settings">Settings</string>

    <!-- Pager texts -->
    <string name="selected_group_text">Selected group:</string>
    <string name="selected_user_text">Showing expenses for:</string>
    <string name="selected_user_expense_total_text">Expenses total:</string>
    <string name="split_fairly_button">Split fairly</string>
    <string name="groups_header">Select group from the list below.\nCreate a new group by press the (+) icon.</string>
    <string name="users_header">To change which user\'s expenses you are viewing,\nselect a user from the list below.\nTo invite a user to your group, press the (+) icon.</string>
    <string name="settings">Settings</string>

    <!-- Invite texts -->
    <string name="group_invite_header">Group invite</string>
    <string name="invite_main_text">You have received an invite to join the group $1 by $2</string>
    <string name="accept_invite">Accept</string>
    <string name="decline_invite">Decline</string>

    <!-- Expense popup -->
    <string name="expense_title">Title</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_comment">Comment (optional)</string>
    <string name="expense_modification_failed">Failed to store/edit/delete the expense</string>

    <!-- Group popup -->
    <string name="group_name">Group name</string>
    <string name="group_explanation">Change name of the group and press OK, or press DELETE to permanently delete the group. Please note that all expenses connected to a group also will be deleted permanently (for all users that are members of the group)</string>
    <string name="group_modification_failed">Failed to store/edit/delete the group</string>

    <!-- User invite popup -->
    <string name="user_name">Username</string>
    <string name="invite_user_explanation">Write the user name of the user you wish to invite to your group into the field below and press OK.</string>

    <!-- Settings strings -->
    <string name="settings_general_header">General app settings</string>
    <string name="settings_account_header">Account settings/actions</string>

    <string name="setting_income_name">My income</string>
    <string name="setting_income_comment">Tap to change your monthly income (after taxes)</string>
    <string name="setting_income_default">1000</string>

    <string name="setting_logout_name">Log out</string>
    <string name="setting_logout_comment">Logs out from all your devices</string>

    <string name="setting_delete_account_name">Delete account</string>
    <string name="setting_delete_account_comment">Selecting this option and then confirming the popup will permanently delete your account and all related data (including expenses and groups you have created)</string>

    <string name="settings_saved">Settings saved!</string>
    <string name="settings_save_failed">Failed to save settings :(</string>
</resources>
