<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_gravity="fill_horizontal"
    android:background="@color/toolbar_background">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        android:fontFamily="@font/berkshire_swash"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/logo_color"
        android:textSize="22sp"/>

    <LinearLayout
        android:id="@+id/top_expenses_group"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_toLeftOf="@id/top_groups_group">

        <ImageView
            android:id="@+id/action_list_transactions"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_format_list_bulleted_black_24dp"
            android:visibility="visible">
        </ImageView>

        <TextView
            android:id="@+id/expenses_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabname_expenses"
            android:textSize="10dp"
            android:alpha="0"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_groups_group"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_toLeftOf="@id/top_users_group">

        <ImageView
            android:id="@+id/action_list_groups"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_group_24dp"
            android:visibility="visible">
        </ImageView>

        <TextView
            android:id="@+id/groups_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabname_groups"
            android:textSize="10dp"
            android:alpha="0"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_users_group"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_toLeftOf="@id/top_settings_group">

        <ImageView
            android:id="@+id/action_list_users"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_person_24dp"
            android:visibility="visible">
        </ImageView>

        <TextView
            android:id="@+id/users_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabname_users"
            android:textSize="10dp"
            android:alpha="0"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_settings_group"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/action_list_settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_settings_24dp"
            android:visibility="visible">
        </ImageView>

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/tabname_settings"
            android:textSize="10dp"/>

    </LinearLayout>

</RelativeLayout>